added clear button

--- a/code/web/main.html
+++ b/code/web/main.html
@@ -8,6 +8,11 @@
     <script src="main.js"></script>
 </head>
 <body>
-<canvas id="canvas" width="200" height="200"></canvas>
+<div>
+    <canvas id="canvas" width="200" height="200"></canvas>
+</div>
+<div>
+    <button id="clear">Clear</button>
+</div>
 </body>
 </html>
