--- a/code/web/main.html
+++ b/code/web/main.html
@@ -6,7 +6,8 @@
     <title>MNIST</title>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
     <script src="main.js"></script>
-    <script src="data.js"></script>
+    <script src="predict.js"></script>
+    <script src="draw.js"></script>
     <style>
         #canvas{
             border: 3px solid #000;
@@ -19,6 +20,7 @@
 </div>
 <div>
     <button id="clear">Clear</button>
+    <label>Result: </label>
     <label id="result">Don't Know</label>
 </div>
 </body>
