added small canvas to show how the tensor looks

--- a/code/web/main.html
+++ b/code/web/main.html
@@ -17,6 +17,7 @@
 <body>
 <div>
     <canvas id="canvas" width="196" height="196"></canvas>
+    <canvas id="small-canvas" width="28" height="28"></canvas>
 </div>
 <div>
     <button id="clear">Clear</button>
