updated title & formatted json files

--- a/code/web/main.html
+++ b/code/web/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Jin Huang">
-    <title>MNIST</title>
+    <title>Digit Recognition</title>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
     <script src="main.js"></script>
     <script src="predict.js"></script>
