--- a/code/web/main.html
+++ b/code/web/main.html
@@ -24,5 +24,9 @@
     <label>Result: </label>
     <label id="result">Don't Know</label>
 </div>
+<div>
+    <label>Is the result correct?</label>
+    <button id="correction">No</button>
+</div>
 </body>
 </html>
