--- a/code/web/main.html
+++ b/code/web/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Jin Huang">
     <title>Digit Recognition</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
     <script src="main.js"></script>
     <script src="predict.js"></script>
     <script src="draw.js"></script>
