--- a/code/main.html
+++ b/code/main.html
@@ -5,6 +5,8 @@
     <meta name="author" content="Jin Huang">
     <title>Digit Recognition</title>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
     <script src="main.js"></script>
     <script src="predict.js"></script>
     <script src="draw.js"></script>
