quality of code update && data.js extracted

--- a/code/main.html
+++ b/code/main.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
     <script src="main.js"></script>
     <script src="predict.js"></script>
+    <script src="data.js"></script>
     <script src="draw.js"></script>
     <style>
         #canvas {
