--- a/code/main.html
+++ b/code/main.html
@@ -15,6 +15,9 @@
         #canvas {
             border: 3px solid #000;
         }
+        #small-canvas {
+            border: 1px solid #000;
+        }
     </style>
 </head>
 <body>
