--- a/code/main.html
+++ b/code/main.html
@@ -10,6 +10,7 @@
     <script src="main.js"></script>
     <script src="predict.js"></script>
     <script src="data.js"></script>
+    <script src="centralizer.js"></script>
     <script src="draw.js"></script>
     <style>
         #canvas {
